@@ -237,12 +237,6 @@ lib/npg_tracking/report/events.pm
 lib/npg/samplesheet.pm
 lib/npg/samplesheet/auto.pm
 lib/npg/util.pm
-lib/npg/util/image/graph.pm
-lib/npg/util/image/heatmap.pm
-lib/npg/util/image/image.pm
-lib/npg/util/image/image_map.pm
-lib/npg/util/image/merge.pm
-lib/npg/util/image/scale.pm
 lib/npg/util/mailer.pm
 lib/npg/view.pm
 lib/npg/view/administration.pm
@@ -515,7 +509,6 @@ t/60-illumina-run-folder.t
 t/60-illumina-run-long_info.t
 t/60-illumina-run-short_info.t
 t/60-illumina-run.t
-t/60-util-image_graph.t
 t/60-util-mailer.t
 t/70-bin-npg_status2file.t
 t/80-npg_tracking-report-events.t
