@@ -1,5 +1,7 @@
 LIST OF CHANGES
 
+ - remove unused classes for image generation
+
 release 86.4
  - reference find role: remove unused 'subset' attribute and
    previously deprecated 'single_ref_found' method 
